# willy-beat

./: .gitignore  CMakeLists.txt  README.md  beat2beat.py  bulk_generate.py  enrich_tags.py  enrich_tags_llm.py  generate_classics.py  generate_fills.py  install_presets.sh  migrate_v1_to_v2.py  requirements.txt  retry_failures.py  spotify2beat.py
Presets/: ! Empty.beat  12_8 Doo-Wop.beat  12_8 Slow Blues.beat  12_8 Soul Ballad.beat  2-Step Garage Fill.beat  2-Step Garage Shuffle.beat  5_4 Rock.beat  6_8 Blues.beat  6_8 Marching.beat  6_8 Slow Rock.beat  6_8 Soul.beat  745 sticky.beat  808 Trap Fill.beat  A Love Supreme, Pt. I – Acknowledgement.beat  Acid House 303 Fill.beat  Acid Jazz Hip Hop Groove.beat  Acid Squelch Fill.beat  Acid Techno.beat  Acoustic Brush Sweep Fill.beat  Acoustic Country Ballad.beat  Acoustic Roots Hoedown.beat  Acoustic Roots Reggae Ballad.beat  Acoustic Roots Stomp Fill.beat  Adagio for Strings.beat  Adorn.beat  Afro-Cuban 6_8.beat  Afro-Cuban Boogaloo Groove.beat  Afro-Cuban Cascara Groove.beat  Afro-Cuban Jazz Standard.beat  Afro-Cuban Mambo Fill.beat  Afrobeat Fill.beat  Afrobeat.beat  Aggressive Breakdown Tom Fill.beat  Aggressive Nu-Metal Stomp.beat  Aggressive Punk Fill.beat  All Hotties Eat the Jizz.beat  All My Friends (feat. Tinashe & Chance the Rapper).beat  All My Friends.beat  All Of The Lights.beat  Amapiano Log Drum.beat  (+898 more)
Source/: DrumPattern.h  DrumwrightLookAndFeel.cpp  DrumwrightLookAndFeel.h  PatternLibrary.cpp  PatternLibrary.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StockDrums.cpp  StockDrums.h  TagVectorIndex.h  TagVectorIndex.mm  VariationGenerator.cpp  VariationGenerator.h  WillyBeatLookAndFeel.cpp  WillyBeatLookAndFeel.h
Tools/: BakeTagEmbeddings.mm  generate_v2_presets.py  pack_presets.py
